Completed Slider UI; Included infobar button carat to imply collapsibility; Fixed infobar button layout.

--- a/project/pl-webui/web/static/resources/css/style.css
+++ b/project/pl-webui/web/static/resources/css/style.css
@@ -20,6 +20,14 @@ button {
 	font-family: "Montserrat", sans-serif;
 }
 
+.p-header {
+	font-size: 24px;
+}
+
+.p-arrow {
+	font-size: 10px;
+}
+
 .w3-row-padding img {
   margin-bottom: 12px
 }
@@ -64,8 +72,50 @@ button {
 	/*left: 50%;*/
 	/*transform: translateX(-50%);*/
 	/* margin: 0 auto; */
-	height: 100px;
+	height: 75px;
 	width: 300px;
+	padding: 10px;
+}
+
+.slidecontainer {
+    width: 100%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    border-radius: 10px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #607D8B;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #607D8B;
+    cursor: pointer;
 }
 
 
